# Nexus-Agent

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Agent Runs.txt  Makefile  README.md  SECURITY.md  Turn 1 and Turn 2.txt  alembic.ini  fix-and-restart.sh  pyproject.toml  reset-db.sh  start-backend.sh  test-chat.sh  test_comprehensive_report.sh  test_fast.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0004_resilience.py  0005_tool_credential.py
deploy/k8s/: secret.yaml  service.yaml
docker/: Dockerfile  docker-compose.override.yml  docker-compose.yml
docs/: api-reference.md  architecture.md  hitl.md  integration-guide.md  memory.md  operations.md  performance.md  quickstart.md  runbook.md  scaling.md  tool-registration.md
examples/: README.md  chat_client.py  hitl_demo.py  quickstart.py  register_tools.py
examples/demo_app/: main.py  models.py
frontend/: .env.example  Dockerfile  components.json  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vite.embed.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  chat.spec.ts  tools.spec.ts
frontend/scripts/: start_dev.py
frontend/src/: App.tsx  embed-main.tsx  index.css  temp_test_gemma_tools.py
k8s/: deployment.yaml  ingress.yaml
nexus-agent/: .env.example  .gitignore  AGENTS.md  README.md  proxy_out.txt  pyproject.toml  seed_demo.py  srv_log.txt
nexus-agent/alembic/: env.py
nexus-agent/deploy/: README.md
nexus-agent/docker/: Dockerfile  docker-compose.override.yml  docker-compose.yml
nexus-agent/docs/: api-reference.md  architecture.md  embed-integration.md  frontend-guide.md  hitl.md  integration-guide.md  mcp.md  memory.md  operations.md  quickstart.md  runbook.md  scaling.md  tool-registration.md
nexus-agent/examples/: README.md  embed_chatbot.html  quickstart.py
nexus-agent/scripts/: backfill_keywords.py  backup.sh  boot_and_test.py  boot_test_all.py  copy_to_wsl.sh  dev.ps1  dev.sh  e2e_test.py  e2e_verify.py  final_test.py  fix_embed_table.py  (+29 more)
nexus-console/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
scripts/: deploy.sh  dev.sh  final_test.py  get_token.py  restart_server.sh  seed.sql  seed_user.py  smoke_test_db.py  start_all.py  test_stream.py
tests/: conftest.py
(+618 files in other folders)
